@@ -5,10 +5,12 @@
   <property name="acl_write_roles">Manager</property>
   <property name="write_ignore_storage">True</property>
   <property
-       name="write_process_expr">python:util.dirCrossSetList('members', 'groups', data.get('group'), data[field.getFieldId()])</property>
+       name="write_process_expr">python:util.dirCrossSetList('members', 'groups', group, value)</property>
+  <property name="write_process_dependent_fields">group</property>
   <property name="read_ignore_storage">True</property>
   <property
-       name="read_process_expr">python:util.dirCrossGetList('members', 'groups', data.get('group'))</property>
+       name="read_process_expr">python:util.dirCrossGetList('members', 'groups', group)</property>
+  <property name="read_process_dependent_fields">group</property>
  </field>
  <field name="subgroups" meta_type="CPS String List Field"/>
 </object>
